examples/envoy-conf.yaml
# see ENVOY.md for details about priorty on what the effective values are for
# x-eas-verify-params, x-forwarded-port, and x-forwarded-proto in a given request
admin:
  access_log_path: /dev/stdout
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 10444
layered_runtime:
  layers:
    - name: static_layer_0
      static_layer:
        envoy:
          resource_limits:
            listener:
              listener_proxy:
                connection_limit: 100
        overload:
          global_downstream_max_connections: 500
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /dev/stdout
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: httpbin
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              #disabled: true
                              # this is only valid for the grpc service
                              check_settings:
                                context_extensions:
                                  # x-eas-verify-params: '{"config_token":"..."}'
                                  x-eas-verify-params: '{"config_token_store_id":"dep_a", "config_token_id":"keycloak"}'
                                  #x-forwarded-proto: "https"
                                  #x-forwarded-port: 443
                http_filters:
                  # filter is optional (and only relevant for grpc) and can be used to dynamically set
                  # x-eas-verify-params, x-forwarded-port, and x-forwarded-proto
                  - name: envoy.filters.http.lua
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                      inline_code: |
                        function envoy_on_request(request_handle)
                          local headers = request_handle:headers()
                          request_handle:streamInfo():dynamicMetadata():set("eas", "eas", {
                            -- must use this key syntax due to hyphens in key name
                            -- must add `eas` to `metadata_context_namespaces` in the authz filter
                            -- remove the `--` below for the values/lines you wish to explicitly set/override
                            -- ["x-eas-verify-params"] = '{"config_token_store_id":"dep_a", "config_token_id":"keycloak"}',
                            -- ["x-forwarded-port"] = 443,
                            -- ["x-forwarded-proto"] = "http",
                          })
                        end
                  # both http and grpc filters are here for demonstration purposes only
                  # use only 1 or the other, not both
                  - name: envoy.filters.http.ext_authz-http
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      stat_prefix: ext_authz_eas
                      transport_api_version: V3
                      filter_enabled:
                        default_value:
                          # 0 effectively disables the filter
                          numerator: 0
                          denominator: HUNDRED
                      http_service:
                        authorizationRequest:
                          allowedHeaders:
                            patterns:
                              - exact: cookie
                              - exact: X-Forwarded-Host
                              - exact: X-Forwarded-Method
                              - exact: x-forwarded-proto
                              - exact: X-Forwarded-Uri
                          headers_to_add:
                            - key: "x-eas-verify-params"
                              # value: '{"config_token":"..."}'
                              value: '{"config_token_store_id":"dep_a", "config_token_id":"keycloak"}'
                        authorizationResponse:
                          allowedUpstreamHeaders:
                            patterns:
                              - exact: x-access-token
                              - exact: authorization
                              - exact: x-userinfo
                              - exact: x-id-token
                        pathPrefix: /envoy/verify-params-header
                        serverUri:
                          cluster: eas-http
                          timeout: 5.00s
                          uri: http://localhost:8080
                  # grpc is less strict about what headers are allowed/trusted therefore
                  # we only use metadata to remain secure, it is still recommended to
                  # ensure x-eas-verify-params, x-forwarded-proto, and x-forwarded-port
                  # headers are cleansed/trusted before the grpc filter
                  - name: envoy.filters.http.ext_authz-grpc
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      stat_prefix: ext_authz_eas
                      transport_api_version: V3
                      filter_enabled:
                        default_value:
                          # 0 effectively disables the filter
                          numerator: 100
                          denominator: HUNDRED
                      grpc_service:
                        initial_metadata:
                        #- key: x-eas-verify-params
                        #  value: '{"config_token_store_id":"dep_a", "config_token_id":"keycloak"}'
                        #- key: x-forwarded-proto
                        #  value: https
                        #- key: x-forwarded-port
                        #  value: 443
                        envoy_grpc:
                          cluster_name: eas-grpc
                        timeout: 5.00s
                      metadata_context_namespaces:
                        - eas
                  - name: envoy.filters.http.router

  clusters:
    - name: eas-http
      connect_timeout: 5.00s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: eas-http
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: localhost
                      port_value: 8080
    - name: eas-grpc
      connect_timeout: 5.00s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      load_assignment:
        cluster_name: eas-grpc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: localhost
                      port_value: 50051
    - name: httpbin
      connect_timeout: 5.00s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: httpbin
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: httpbin.org
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: httpbin.org
          common_tls_context:
            validation_context:
              match_subject_alt_names:
                - exact: "*.httpbin.org"
              trusted_ca:
                filename: /etc/ssl/certs/ca-certificates.crt
